--- a/frontend/main.html
+++ b/frontend/main.html
@@ -5,11 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Glovo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <img src="img/glovo logo.png">
-        <button><a src="#registration">Начать!</a></button>
-    </header>
+    </header>  
 </body>
 </html>
