--- a/frontend/7.html
+++ b/frontend/7.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cart</title>
 </head>
 <body>
-    
+    <div >
+        <h1>Glovo</h1>
+    </div>
+
+    <div>
+        <img src="https://images7.alphacoders.com/103/1033300.jpg" alt="photo of burger" width="200px">
+        <h3>Cheeseburger Double Junior Set</h3>
+        <p>Price: 50$</p>
+        <p>Burger with double mini-cutlet of marbled beef + French fries</p>
+        <div>
+            <button type="submit">-</button>
+            <p>1</p>
+            <button type="submit">+</button>
+        </div>
+
+    </div>
 </body>
 </html>
