--- a/frontend/7.html
+++ b/frontend/7.html
@@ -2,23 +2,47 @@
 <html lang="en">
 <head>
     <title>Cart</title>
+    <link rel="stylesheet" href="assets/style/main_Aru.css">
 </head>
 <body>
     <div >
-        <h1>Glovo</h1>
+        <h1 class="header">Glovo</h1>
     </div>
 
+    <ul>
+        <li>
+            <div class="cart_block">
+                <img src="https://images7.alphacoders.com/103/1033300.jpg" alt="photo of burger" width="200px">
+                <h3>Cheeseburger Double Junior Set</h3>
+                <p>Price: 50$</p>
+                <p>Burger with double mini-cutlet of marbled beef + French fries</p>
+                <div class="edit">
+                    <button class="button-edit" type="submit">-</button>
+                    <p class="button-edit">1</p>
+                    <button class="button-edit" type="submit">+</button>
+                </div>
+        
+            </div>
+        </li>
+        <li>
+            <div class="cart_block">
+                <img src="https://images.wsj.net/im-191342?width=860&size=1.5&pixel_ratio=2" alt="photo of burger" width="200px">
+                <h3>Bryansk set Set</h3>
+                <p>Price: 80$</p>
+                <p>Burger with mini-cutlet of marbled beef with mushroom stew and cucumbers + French fries + Coca Cola 500 ml</p>
+                <div class="edit">
+                    <button class="button-edit" type="submit">-</button>
+                    <p class="button-edit">1</p>
+                    <button class="button-edit" type="submit">+</button>
+                </div>
+        
+            </div>
+        </li>
+    </ul>
     <div>
-        <img src="https://images7.alphacoders.com/103/1033300.jpg" alt="photo of burger" width="200px">
-        <h3>Cheeseburger Double Junior Set</h3>
-        <p>Price: 50$</p>
-        <p>Burger with double mini-cutlet of marbled beef + French fries</p>
-        <div>
-            <button type="submit">-</button>
-            <p>1</p>
-            <button type="submit">+</button>
-        </div>
-
+        <button type="submit" class="button-order">
+            Order products for 130$
+        </button>
     </div>
 </body>
 </html>
