--- a/frontend/1.html
+++ b/frontend/1.html
@@ -32,7 +32,9 @@
                     </div>
                     <input class="login-form-item2 login-form-input" type="email" name="email" class="login-form-input" placeholder="Type your username">
                     <input class="login-form-item3 login-form-input" type="password" name="password" class="login-form-input" placeholder="Type your password">
-                    <input class="login-form-item4" type="submit" value="SIGN IN">
+                    <button class="login-form-item4" type="submit">
+                        SIGN IN
+                    </button>
                 </form>
             </div>
         </div>
