--- a/frontend/3_3.html
+++ b/frontend/3_3.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
     <link rel="stylesheet" href="./assets/style/main.css">
     <link rel="stylesheet" href="./assets/style/main_Yera.css">
 
-    <title>Main Page</title>
+    <title>Restaurant 3</title>
 </head>
 <body>
     <div class="wrapper">
@@ -34,13 +35,13 @@
                 Categories
             </h1>
             <div class="main-page-content-wrapper">
-                <a href="./3_1.html" class="main-page-circle-link">
+                <a href="" class="main-page-circle-link">
                     <img class="main-page-circle-icon" src="./assets/img/fast-food.png" alt="">
                 </a>
-                <a href="./3_1.html" class="main-page-circle-link">
+                <a href="" class="main-page-circle-link">
                     <img class="main-page-circle-icon" src="./assets/img/grocery.png" alt="">
                 </a>
-                <a href="./3_1.html" class="main-page-circle-link">
+                <a href="" class="main-page-circle-link">
                     <img class="main-page-circle-icon" src="./assets/img/surprise.png" alt=""> 
                 </a>
             </div>
