--- a/frontend/2.html
+++ b/frontend/2.html
@@ -29,19 +29,22 @@
             </div>
         </header>
 
-        <div class="main-page-wrapper">
-            <h1 class="main-page-text">
+        <div class="page-wrapper">
+            <h1 class="page-text">
                 Categories
             </h1>
-            <div class="main-page-content-wrapper">
-                <a href="./3_1.html" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/fast-food.png" alt="">
+            <div class="page-content-wrapper">
+                <a href="./3_1.html" class="page-link circle-link">
+                    <img class="page-circle-icon" src="./assets/img/fast-food.png" alt="Fast food">
+                    <span class="page-circle-text">Fast Food</span>
                 </a>
-                <a href="./3_1.html" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/grocery.png" alt="">
+                <a href="./3_2.html" class="page-link circle-link">
+                    <img class="page-circle-icon" src="./assets/img/grocery.png" alt="Groceries">
+                    <span class="page-circle-text">Groceries</span>
                 </a>
-                <a href="./3_1.html" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/surprise.png" alt=""> 
+                <a href="./3_3.html" class="page-link circle-link">
+                    <img class="page-circle-icon" src="./assets/img/drugstore.png" alt="Gifts"> 
+                    <span class="page-circle-text">Pharmacy</span>
                 </a>
             </div>
         </div>
