--- a/frontend/3_2.html
+++ b/frontend/3_2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style/main.css">
     <link rel="stylesheet" href="./assets/style/main_Yera.css">
 
-    <title>Restaurant 2</title>
+    <title>Groceries</title>
 </head>
 <body>
     <div class="wrapper">
@@ -29,19 +29,25 @@
             </div>
         </header>
 
-        <div class="main-page-wrapper">
-            <h1 class="main-page-text">
-                Categories
+        <div class="page-wrapper">
+            <h1 class="page-text">
+                Shops
             </h1>
-            <div class="main-page-content-wrapper">
-                <a href="" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/fast-food.png" alt="">
+            <div class="page-content-wrapper">
+                <a href="" class="page-link rectangle-link">
+                    <div class="rectangle-link-background" style="background-image: url(./assets/img/mgm.jpg);">
+                        <span class="page-rectangle-text">Magnum</span>
+                    </div>
                 </a>
-                <a href="" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/grocery.png" alt="">
+                <a href="" class="page-link rectangle-link">
+                    <div class="rectangle-link-background" style="background-image: url(./assets/img/grn.jpg);">
+                        <span class="page-rectangle-text">Green</span>
+                    </div>
                 </a>
-                <a href="" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/surprise.png" alt=""> 
+                <a href="" class="page-link rectangle-link">
+                    <div class="rectangle-link-background" style="background-image: url(./assets/img/rms.jpg);">
+                        <span class="page-rectangle-text">Ramstore</span>
+                    </div>
                 </a>
             </div>
         </div>
