--- a/frontend/3_3.html
+++ b/frontend/3_3.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style/main.css">
     <link rel="stylesheet" href="./assets/style/main_Yera.css">
 
-    <title>Restaurant 3</title>
+    <title>Gifts</title>
 </head>
 <body>
     <div class="wrapper">
@@ -30,19 +29,25 @@
             </div>
         </header>
 
-        <div class="main-page-wrapper">
-            <h1 class="main-page-text">
-                Categories
+        <div class="page-wrapper">
+            <h1 class="page-text">
+                Pharmacy
             </h1>
-            <div class="main-page-content-wrapper">
-                <a href="" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/fast-food.png" alt="">
+            <div class="page-content-wrapper">
+                <a href="" class="page-link rectangle-link">
+                    <div class="rectangle-link-background" style="background-image: url(./assets/img/sdh.jpg);">
+                        <span class="page-rectangle-text">Sadykhan</span>
+                    </div>
                 </a>
-                <a href="" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/grocery.png" alt="">
+                <a href="" class="page-link rectangle-link">
+                    <div class="rectangle-link-background" style="background-image: url(./assets/img/bsr.jpg);">
+                        <span class="page-rectangle-text">Biosphera</span>
+                    </div>
                 </a>
-                <a href="" class="main-page-circle-link">
-                    <img class="main-page-circle-icon" src="./assets/img/surprise.png" alt=""> 
+                <a href="" class="page-link rectangle-link">
+                    <div class="rectangle-link-background" style="background-image: url(./assets/img/erp.jpg);">
+                        <span class="page-rectangle-text">Europharma</span>
+                    </div>
                 </a>
             </div>
         </div>
