--- a/frontend/6.html
+++ b/frontend/6.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="./assets/img/browser icon.png">
     <link rel="stylesheet" href="./assets/style/main.css">
-    <link rel="stylesheet" href="./assets/style/main_Yera.css">
-
-    <title>Fast Food</title>
+    <link rel="stylesheet" href="./assets/style/main_Binaz.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <title>McCombo Double CheeseBurger</title>
 </head>
-<body>
+<div>
     <div class="wrapper">
         <header>
             <div id="header-wrapper">
@@ -21,34 +21,23 @@
                 </div>
                 <div class="header-right">
                     <form action="./7.html">
-                        <button type="submit" class="button-cart">
-                            Cart
-                        </button>
+                        <button type="submit" class="button-cart">Cart</button>
                     </form>
                 </div>
             </div>
         </header>
 
-        <div class="page-wrapper">
-            <h1 class="page-text">
-                Restaurants
-            </h1>
-            <div class="page-content-wrapper">
-                <a href="./4.html" class="page-link rectangle-link">
-                    <div class="rectangle-link-background" style="background-image: url(./assets/img/mcd.jpg);">
-                        <span class="page-rectangle-text">McDonald's</span>
-                    </div>
+        <div class="box2">
+            <div class="img">
+                <a href="./6.html">
+                    <img src="./assets/img/1combo.png" alt="">
                 </a>
-                <a href="" class="page-link rectangle-link">
-                    <div class="rectangle-link-background" style="background-image: url(./assets/img/kfc.png);">
-                        <span class="page-rectangle-text">KFC</span>
-                    </div>
-                </a>
-                <a href="" class="page-link rectangle-link">
-                    <div class="rectangle-link-background" style="background-image: url(./assets/img/bhd.jpg);">
-                        <span class="page-rectangle-text">Bahandi</span>
-                    </div>
-                </a>
+            </div>
+            <div class="content">
+                <h2>McCombo Double CheeseBurger</h2>
+                <span>1800 ₸</span>
+                <a href="#" class="btn"><i class='bx bx-cart-add'></i></a>
+                <p>Two juicy beef steaks made of natural whole beef with slices of cheese on a special bun filled with mustard, ketchup, onion and a slice of pickle, standard portion of roasted and lightly salted French fries, Coca-soda, Coca-Cola Zero, Fanta, Sprite 0.4 l. or black tea, green tea 0.2 l. and sauce to your choice.</p>
             </div>
         </div>
 
