--- a/frontend/4.html
+++ b/frontend/4.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link rel="icon" href="./assets/img/browser icon.png">
     <link rel="stylesheet" href="./assets/style/main.css">
-    <link rel="stylesheet" href="./assets/style/main_Yera.css">
-
-    <title>Fast Food</title>
+    <link rel="stylesheet" href="./assets/style/main_Binaz.css">
+    <title>McDonald's: Burgers, Fries & More</title>
 </head>
 <body>
     <div class="wrapper">
@@ -21,36 +20,44 @@
                 </div>
                 <div class="header-right">
                     <form action="./7.html">
-                        <button type="submit" class="button-cart">
-                            Cart
-                        </button>
+                        <button type="submit" class="button-cart">Cart</button>
                     </form>
                 </div>
             </div>
         </header>
 
-        <div class="page-wrapper">
-            <h1 class="page-text">
-                Restaurants
-            </h1>
-            <div class="page-content-wrapper">
-                <a href="./4.html" class="page-link rectangle-link">
-                    <div class="rectangle-link-background" style="background-image: url(./assets/img/mcd.jpg);">
-                        <span class="page-rectangle-text">McDonald's</span>
+        <div class="main-page-wrapper">
+            <div class="main-page-content-wrapper">
+                <div class="heading">
+                    <h2>Categories</h2>
+                </div>
+                <div class="menu-container">
+                    <div class="box">
+                        <div class="box-img">
+                            <a href="./5.html">
+                                <img src="./assets/img/mccombo.png" alt="">
+                            </a>
+                        </div>
+                        <h2>McCombo</h2>
                     </div>
-                </a>
-                <a href="" class="page-link rectangle-link">
-                    <div class="rectangle-link-background" style="background-image: url(./assets/img/kfc.png);">
-                        <span class="page-rectangle-text">KFC</span>
+
+                    <div class="box">
+                        <div class="box-img">
+                                <img src="./assets/img/drink.png" alt="">
+                        </div>
+                        <h2>Drinks</h2>
                     </div>
-                </a>
-                <a href="" class="page-link rectangle-link">
-                    <div class="rectangle-link-background" style="background-image: url(./assets/img/bhd.jpg);">
-                        <span class="page-rectangle-text">Bahandi</span>
+
+                    <div class="box">
+                        <div class="box-img">
+                                <img src="./assets/img/onemeal.png" alt="">
+                        </div>
+                        <h2>Individual Positions</h2>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
+
 
         <footer>
             <div id="footer-wrapper">
