--- a/frontend/6.html
+++ b/frontend/6.html
@@ -36,7 +36,7 @@
             <div class="content">
                 <h2>McCombo Double CheeseBurger</h2>
                 <span>1800 ₸</span>
-                <a href="#" class="btn"><i class='bx bx-cart-add'></i></a>
+                <a href="./7.html" class="btn"><i class='bx bx-cart-add'></i></a>
                 <p>Two juicy beef steaks made of natural whole beef with slices of cheese on a special bun filled with mustard, ketchup, onion and a slice of pickle, standard portion of roasted and lightly salted French fries, Coca-soda, Coca-Cola Zero, Fanta, Sprite 0.4 l. or black tea, green tea 0.2 l. and sauce to your choice.</p>
             </div>
         </div>
