--- a/frontend/9.html
+++ b/frontend/9.html
@@ -78,7 +78,7 @@
 				    <input type="radio" id="q8" name="q8" value="4">4 <br>
                     <input type="radio" id="q8" name="q8" value="5">5 <br>
                     
-                    <input class="button-submit-survey" type="submit" value="Sumbit">
+                    <input class="button-submit-survey" type="submit" value="Send">
             </form>
             </div>
         </div>
