--- a/frontend/7.html
+++ b/frontend/7.html
@@ -33,8 +33,8 @@
                         <div class="cart_block">
                             <button class="button-delete" type="button">X</button>
                                 <img class="cart-image" src="./assets/img/cart_photo1.png" alt="photo of burger" >
-                            <h3>McCombo chicken teisty</h3>
-                            <p>Price: 2600 tg</p>
+                            <h3>McCombo Chicken Tasty</h3>
+                            <p>Price: 2600 ₸</p>
                             <p>
                             Large and delicious chicken cutlet in breadcrumbs, tender bun, tomato slices, lettuce, onion, Emmental cheese and spicy Grilled sauce. 
                             A standard serving of crispy French Fries, a drink and a sauce of your choice.
@@ -53,10 +53,9 @@
                             <button class="button-delete" type="button">X</button>
                                 <img class="cart-image" src="./assets/img/cart_photo2.png" alt="photo of burger">
                             <h3>McCombo Big Mac</h3>
-                            <p>Price: 2050 tg</p>
-                            <p>
-                                A delicious burger with two tender beef steaks on a special Big Mac bun with the addition of an exquisite sauce. 
-                                Also included in the Mccomb is a standard serving of French Fries, a drink and a sauce of your choice.
+                            <p>Price: 1950 ₸</p>
+                            <p>Large sandwich with two steaks on a special Big Mac bun with refined sauce, standard serving of roasted and lightly salted French fries, 
+                            carbonated beverage Coca-Cola, Coca-Cola Zero, Fanta, Sprite 0.4 l. or tea black, tea 0.2 l and sauce of your choice.
                             </p>
                             <div class="edit">
                                 <button class="button-edit" type="submit">-</button>
