--- a/frontend/8.html
+++ b/frontend/8.html
@@ -34,7 +34,7 @@
                 <input class="input-item2" type="text" name="surname" id="surname"> <br>
                 <label class="input-item1" for="address">Address:</label> <br>
                 <input class="input-item2" type="text" name="address" id="address"> <br>
-                <label class="input-item1" for="home-number">Home number:</label> <br>
+                <label class="input-item1" for="home-number">Home Number:</label> <br>
                 <input class="input-item2" type="text" name="home-number" id="home-number"> <br>
                 <label class="input-item1" for="cardnumber">Card Number:</label> <br>
                 <input class="input-item2" type="text" name="cardnumber" id="cardnumber"> <br>
@@ -57,7 +57,7 @@
                     <p>McCombo Big Mac</p>
                     </div>
                     <div class="summary-product-block">
-                    <p> Price: 2050 tg</p>
+                    <p>Price: 1950 ₸</p>
                     </div>
                 </div>
 
@@ -69,15 +69,15 @@
                             
                         </div>
                         <div class="summary-product-block">
-                            <p>McCombo chicken teisty</p>
+                            <p>McCombo Chicken Tasty</p>
                             </div>
                             <div class="summary-product-block">
-                            <p> Price: 2600 tg</p>
+                            <p>Price: 2600 ₸</p>
                             </div>
                 </div>
                 <div>
                     <h4>
-                        Total: 4650tg
+                        Total: 4550 ₸
                     </h4>
                 </div>
                 <a href="./2.html"><input class="button-confirm" type="submit" value="Confirm the order"></a>
