--- a/frontend/9.html
+++ b/frontend/9.html
@@ -43,7 +43,7 @@
                     </label> <br>
                     <textarea name="q2" id="q2" cols="60" rows="5"></textarea> <br>
                     <label for="q3">
-                        3) How much do you rate the glovo app?
+                        3) How much do you rate the Glovo app?
                     </label> <br>
                     <input type="radio" id="q3" name="q3" value="1">1 <br>
 				    <input type="radio" id="q3" name="q3" value="2">2 <br> 
@@ -51,11 +51,11 @@
 				    <input type="radio" id="q3" name="q3" value="4">4 <br>
                     <input type="radio" id="q3" name="q3" value="5">5 <br>
                     <label for="q4">
-                        4) What do you think would improve the quality of service glovo?
+                        4) What do you think would improve the quality of service Glovo?
                     </label> <br>
                     <textarea name="q4" id="q4" cols="60" rows="5"></textarea> <br>
                     <label for="q5"> <br>
-                        5) Have you ever used promo codes in glovo?
+                        5) Have you ever used promo codes in Glovo?
                     </label> <br>
                         <input type="radio" id="q5" name="q5" value="yes">yes <br>
 				        <input type="radio" id="q5" name="q5" value="no">no <br> 
