--- a/frontend/6.html
+++ b/frontend/6.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style/main.css">
     <link rel="stylesheet" href="./assets/style/main_Binaz.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>McCombo Double CheeseBurger</title>
+    <title>McCombo Big Mac</title>
 </head>
 <div>
     <div class="wrapper">
@@ -30,14 +30,16 @@
         <div class="box2">
             <div class="img">
                 <a href="./6.html">
-                    <img src="./assets/img/1combo.png" alt="">
+                    <img src="./assets/img/3combo.png" alt="">
                 </a>
             </div>
             <div class="content">
-                <h2>McCombo Double CheeseBurger</h2>
-                <span>1800 ₸</span>
+                <h2>McCombo Big Mac</h2>
+                <span>1950 ₸</span>
                 <a href="./7.html" class="btn"><i class='bx bx-cart-add'></i></a>
-                <p>Two juicy beef steaks made of natural whole beef with slices of cheese on a special bun filled with mustard, ketchup, onion and a slice of pickle, standard portion of roasted and lightly salted French fries, Coca-soda, Coca-Cola Zero, Fanta, Sprite 0.4 l. or black tea, green tea 0.2 l. and sauce to your choice.</p>
+                <p>Large sandwich with two steaks on a special Big Mac bun with refined sauce, standard serving of roasted and 
+                    lightly salted French fries, carbonated beverage Coca-Cola, Coca-Cola Zero, Fanta, Sprite 0.4 l. or tea black, 
+                    tea 0.2 l and sauce of your choice.</p>
             </div>
         </div>
 
