--- a/frontend/7.html
+++ b/frontend/7.html
@@ -67,9 +67,8 @@
                     </li>
                 </ul>
                 <div>
-                    <form action="./8.html">
+                    <form class="form-order" action="./8.html">
                         <input type="submit" class="button-order" value="Order products for 130$">
-                            
                     </form>
                 </div>
             </div>
