Login and Registration processes

--- a/frontend/5.html
+++ b/frontend/5.html
@@ -15,14 +15,18 @@
         <header>
             <div id="header-wrapper">
                 <div class="header-left">
-                    <a href="./2.html">
+                    <a href="./main.php">
                         <img id="header-logo" src="./assets/img/logo_green.png" alt="Glovo Logo Green" >
                     </a>
                 </div>
+                <div class="header-center">
+                    <input class="header-search" type="text" placeholder="Search...">
+                </div>
                 <div class="header-right">
-                    <form action="./7.html">
-                        <button type="submit" class="button-cart">Cart</button>
-                    </form>
+                    <a class="header-logout" href="./7.html">Cart</a>
+                </div>>
+                <div class="header-far-right">
+                    <a  class="header-logout" href="../backend/logout_process.php">Log Out</a>
                 </div>
             </div>
         </header>
