--- a/frontend/7.html
+++ b/frontend/7.html
@@ -11,15 +11,13 @@
         <header>
             <div id="header-wrapper">
                 <div class="header-left">
-                    <a href="./2.html">
+                    <a href="./main.php">
                         <img id="header-logo" src="./assets/img/logo_green.png" alt="Glovo Logo Green" >
                     </a>
                 </div>
-                <!-- <div class="header-right">
-                    <form action="./7.html">
-                        <button type="submit" class="button-cart">Cart</button>
-                    </form>
-                </div> -->
+                <div class="header-far-right">
+                    <a  class="header-logout" href="../backend/logout_process.php">Log Out</a>
+                </div>
             </div>
         </header>
         <div class="page-cart-wrapper">
