--- a/frontend/10.html
+++ b/frontend/10.html
@@ -132,7 +132,7 @@
                     </a>
                 </div>
                 <div class="footer-content footer-right">
-                    <a href="./9.html" class="footer-text">
+                    <a href="./survey.php" class="footer-text">
                         Survey
                     </a>
                 </div>                
